Library/AXL(Library)/C, C++/AXM.h

// Save all parameter for all current axis by axis. Save as .mot file. Load file by using  AxmMotLoadParaAll.
DWORD    __stdcall AxmMotSaveParaAll(char *szFilePath);
// If you want to set specified velocity unit in RPM(Revolution Per Minute),
// ex>    calculate rpm :
// 4500 rpm ?
// When unit/ pulse = 1 : 1, then it becomes pulse per sec, and
// if you want to set at 4500 rpm , then  4500 / 60 sec : 75 revolution / 1sec
// The number of pulse per 1 revolution of motor shall be known. This can be know by detecting of Z phase in Encoder.
// If 1 revolution:1800 pulse,  75 x 1800 = 135000 pulses are required.
// Operate by input Unit = 1, Pulse = 1800 into AxmMotSetMoveUnitPerPulse.
// Caution : If it is controlled with rpm, velocity and acceleration will be changed to rpm unit as well.

// Set the travel distance of specific axis per pulse.
DWORD    __stdcall AxmMotSetMoveUnitPerPulse(long lAxisNo, double dUnit, long lPulse);
// Set use the Position information Type of specific Axis.
// uPosType  : Select Position Information Type (Actual position / Command position)
//    POSITION_LIMIT '0' - Normal action, In all round action.
//    POSITION_BOUND '1' - Position cycle type, dNegativePos ~ dPositivePos Range
// Caution(PCI-Nx04)
// - If count value exceeds the max value, it becomes min value when setting BOUND.
// The other way, count value exceeds the min value, it becomes max value.

// dPositivePos setting range : 0 ~ positive number
// dNegativePos setting range : negative number ~ 0
DWORD    __stdcall AxmStatusSetPosType(long lAxisNo, DWORD uPosType, double dPositivePos, double dNegativePos);
// Return the Position Information Type of of specific axis.
DWORD    __stdcall AxmStatusGetPosType(long lAxisNo, DWORD *upPosType, double *dpPositivePos, double *dpNegativePos);
// Set absolute encoder origin offset Position of specific axis. [Only for PCI-R1604-MLII]
DWORD    __stdcall AxmStatusSetAbsOrgOffset(long lAxisNo, double dOrgOffsetPos);
// Return absolute encoder origin offset Position of specific axis.
DWORD    __stdcall AxmStatusGetAbsOrgOffset(long lAxisNo, double* dpOrgOffsetPos);
// Set the actual position of specific axis.
DWORD    __stdcall AxmStatusSetActPos(long lAxisNo, double dPos);
// Return the actual position of specific axis.
DWORD    __stdcall AxmStatusGetActPos(long lAxisNo, double *dpPos);
// Return the actual position of specific axis.(received from servo)
DWORD    __stdcall AxmStatusGetAmpActPos(long lAxisNo, double *dpPos);
// Set command position of specific axis.
DWORD    __stdcall AxmStatusSetCmdPos(long lAxisNo, double dPos);
// Return command position of specific axis.
DWORD    __stdcall AxmStatusGetCmdPos(long lAxisNo, double *dpPos);
// Set command position and actual position of specific axis
// Only RTEX use
DWORD    __stdcall AxmStatusSetPosMatch(long lAxisNo, double dPos);
// You can check motion status of specified axis at once by using this API.(Cmd, Act, Driver Status, Mechanical Signal, Universal Signal)
// Specify motion status information by dwMask setting of MOTION_INFO structure.
// dwMask : Display of the motion state (6bit) - ex) dwMask = Display all status if you set '0x1F'.
// The Level(In/Out) is not reflected which is set by user.
//    [0]        |    Command Position Read
//    [1]        |    Actual Position Read
//    [2]        |    Mechanical Signal Read
//    [3]        |    Driver Status Read
//    [4]        |    Universal Signal Input Read
//               |    Universal Signal Output Read
DWORD    __stdcall AxmStatusReadMotionInfo(long lAxisNo, PMOTION_INFO pMI);
// API for Network product only
// API for read AlarmCode of specified axis.
DWORD    __stdcall AxmStatusRequestServoAlarm(long lAxisNo);
// API for read AlarmCode of specified axis.
// upAlarmCode      : Refer to Alarm Code of SERVOPACK.
// MR_J4_xxB        : Upper 16bit(Decimal value of 2 digits alarm code), Lower 16bit(Decimal value of 1digit detail alarm code)
// uReturnMode      : Set return condition of API.[Not used in SIIIH(MR-J4-xxB)]
// [0-Immediate]    : Return immediately after function execution.
// [1-Blocking]     : Does not return until the alarm code is read from SERVOPACK.
// [2-Non Blocking] : Does not return until the alarm code is read from SERVOPACK. but program is not blocked.
DWORD    __stdcall AxmStatusReadServoAlarm(long lAxisNo, DWORD uReturnMode, DWORD *upAlarmCode);
// The API to recieve alarm string about specified error code.
DWORD    __stdcall AxmStatusGetServoAlarmString(long lAxisNo, DWORD uAlarmCode, long lAlarmStringSize, char *szAlarmString);
DWORD    __stdcall AxmStatusReadServoAlarmString(long lAxisNo, long lAlarmStringSize, char *szAlarmString);
// The API to Command to SERVOPACK for read Alarm History of specified axis.
DWORD    __stdcall AxmStatusRequestServoAlarmHistory(long lAxisNo);
// The API to read SERVOPACK alarm history of specified axis.
// lpCount          : Number of read alarm history.
// upAlarmCode      : The array to return alarm history.
// uReturnMode      : Set return mode of this API.
// [0-Immediate]    : Return immediately after function execution.
// [1-Blocking]     : Not return until reading alarm code from SERVOPACK.
// [2-Non Blocking] : Not return until reading alarm code from SERVOPACK. but program is not blocked.
DWORD    __stdcall AxmStatusReadServoAlarmHistory(long lAxisNo, DWORD uReturnMode, long *lpCount, DWORD *upAlarmCode);
// Clear SERVOPACK alarm history of specified axis.
DWORD    __stdcall AxmStatusClearServoAlarmHistory(long lAxisNo);
//======== API related home. ======================================================================================================

// Set home sensor level of specific axis.
// uLevel : LOW(0), HIGH(1)
DWORD    __stdcall AxmHomeSetSignalLevel(long lAxisNo, DWORD uLevel);
// Return home sensor level of specific axis.
DWORD    __stdcall AxmHomeGetSignalLevel(long lAxisNo, DWORD *upLevel);
// Verify current home signal input status. Hoe signal can be set by user optionally by using AxmHomeSetMethod API.
// upStatus : OFF(0), ON(1)
DWORD    __stdcall AxmHomeReadSignal(long lAxisNo, DWORD *upStatus);
// Parameters related to origin detecting must be set in order to detect origin of relevant axis.
// If the initialization is done properly by using MotionPara setting file, no separate setting is required.
// In the setting of origin detecting method, direction of detecting proceed, signal to be used for origin, active level of origin sensor and detecting/no detecting of encoder Z phase are set.
// Caution : When the level is set wrong, it may operate + direction even though ? direction is set, and may cause problem in finding home.
// (Refer the guide part of AxmMotSaveParaAll for detail information. )
// Use AxmSignalSetHomeLevel for home level.
// HClrTim : HomeClear Time : Queue time for setting origin detecting Encoder value.
// HmDir(Home direction): DIR_CCW(0): - direction    , DIR_CW(1) = + direction   // HOffset ? traveled distance after detecting of origin.
// uZphas: Set whether to detect of encoder Z phase after completion of the 1st detecting of origin.
// HmSig : PosEndLimit(0) -> +Limit
//         NegEndLimit(1) -> -Limit
//         HomeSensor (4) -> origin sensor(universal input 0)
DWORD   __stdcall AxmHomeSetMethod(long lAxisNo, long lHmDir, DWORD uHomeSignal, DWORD uZphas, double dHomeClrTime, double dHomeOffset);
// Return set parameters related to home.
DWORD   __stdcall AxmHomeGetMethod(long lAxisNo, long *lpHmDir, DWORD *upHomeSignal, DWORD *upZphas, double *dpHomeClrTime, double *dpHomeOffset);
// Set Home Search Fine tunning Method (Don't care Setting by default).
// dHomeDogDistance[500 pulse]: Set Dog Length. (Unit = AxmMotSetMoveUnitPerPulse function Setting Unit)
// lLevelScanTime[100msec]: Set level status confirmation scan time. (msec[1~1000])
// dwFineSearchUse[USE]: Select find search method. (Default use 5Step, Select 0 use 3Step)
// dwHomeClrUse[USE]: Set After Home Search Automatically Command/Actual Position Set 0 value of  specific axis.
DWORD   __stdcall AxmHomeSetFineAdjust(long lAxisNo, double dHomeDogLength, long lLevelScanTime, DWORD uFineSearchUse, DWORD uHomeClrUse);
// Return set Home  Search fine tunning Method parameters related to home.
DWORD   __stdcall AxmHomeGetFineAdjust(long lAxisNo, double *dpHomeDogLength, long *lpLevelScanTime, DWORD *upFineSearchUse, DWORD *upHomeClrUse);
DWORD   __stdcall AxmHomeSetInterlock(long lAxisNo, DWORD uInterlockMode, double dInterlockData);
DWORD   __stdcall AxmHomeGetInterlock(long lAxisNo, DWORD *upInterlockMode, double *dpInterlockData);
// Detect through several steps in order to detect origin quickly and precisely. Now, set velocities to be used for each step.
// The time of origin detecting and the accuracy of origin detecting are decided by setting of these velocities.
// Set velocity of origin detecting of each axis by changing velocities of each step.
// (Refer the guide part of AxmMotSaveParaAll for detail information.)
// API which sets velocity to be used in origin detecting.
// [dVelFirst]- 1st move velocity   [dVelSecond]- velocity after detecting   [dVelThird]- the last velocity  [dvelLast]- index detecting and in order to detect precisely.
// [dAccFirst]- 1st move acceleration [dAccSecond]-acceleration after detecting.
DWORD    __stdcall AxmHomeSetVel(long lAxisNo, double dVelFirst, double dVelSecond, double dVelThird, double dVelLast, double dAccFirst, double dAccSecond);
// Return set velocity to be used in origin detecting.
DWORD    __stdcall AxmHomeGetVel(long lAxisNo, double *dpVelFirst, double *dpVelSecond, double *dpVelThird, double *dpVelLast, double *dpAccFirst, double *dpAccSecond);