Library/AXL(Library)/Visual Basic(Net)/AXM.vb


' Set use the Position information Type of specific Axis.
' uPosType  : Select Position Information Type (Actual position / Command position)
'    POSITION_LIMIT '0' - Normal action, In all round action.
'    POSITION_BOUND '1' - Position cycle type, dNegativePos ~ dPositivePos Range
' Caution(PCI-Nx04)
' - If count value exceeds the max value, it becomes min value when setting BOUND.
' The other way, count value exceeds the min value, it becomes max value.

' dPositivePos setting range : 0 ~ positive number
' dNegativePos setting range : negative number ~ 0
Public Declare Function AxmStatusSetPosType Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uPosType As Integer, ByVal dPositivePos As Double, ByVal dNegativePos As Double) As Integer
' Return the Position Information Type of of specific axis.
Public Declare Function AxmStatusGetPosType Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upPosType As Integer, ByRef dpPositivePos As Double, ByRef dpNegativePos As Double) As Integer
' Set absolute encoder origin offset Position of specific axis. [Only for PCI-R1604-MLII]
Public Declare Function AxmStatusSetAbsOrgOffset Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dOrgOffsetPos As Double) As Integer

' Return absolute encoder origin offset Position of specific axis. [Only for PCI-R1604-MLII]
Public Declare Function AxmStatusGetAbsOrgOffset Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpOrgOffsetPos As Double) As Integer


' Set the actual position of specific axis.
Public Declare Function AxmStatusSetActPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double) As Integer
' Return the actual position of specific axis.
Public Declare Function AxmStatusGetActPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpPos As Double) As Integer
    Public Declare Function AxmStatusGetAmpActPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpPos As Double) As Integer


' Set command position of specific axis.
Public Declare Function AxmStatusSetCmdPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double) As Integer
' Return command position of specific axis.
Public Declare Function AxmStatusGetCmdPos Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpPos As Double) As Integer
' Set command position and actual position of specific axis
' Only RTEX use
Public Declare Function AxmStatusSetPosMatch Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dPos As Double) As Integer


' You can check motion status of specified axis at once by using this API.(Cmd, Act, Driver Status, Mechanical Signal, Universal Signal)
' Specify motion status information by dwMask setting of MOTION_INFO structure.
' dwMask : Display of the motion state (6bit) - ex) dwMask = Display all status if you set '0x1F'.
' The Level(In/Out) is not reflected which is set by user.
'    [0]        |    Command Position Read
'    [1]        |    Actual Position Read
'    [2]        |    Mechanical Signal Read
'    [3]        |    Driver Status Read
'    [4]        |    Universal Signal Input Read
'               |    Universal Signal Output Read
Public Declare Function AxmStatusReadMotionInfo Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef pMI As PMOTION_INFO) As Integer


' API for Network product only
' API for read AlarmCode of specified axis.
Public Declare Function AxmStatusRequestServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer
' API for read AlarmCode of specified axis.
' upAlarmCode      : Refer to Alarm Code of SERVOPACK.
' MR_J4_xxB        : Upper 16bit(Decimal value of 2 digits alarm code), Lower 16bit(Decimal value of 1digit detail alarm code)
' uReturnMode      : Set return condition of API.[Not used in SIIIH(MR-J4-xxB)]
' [0-Immediate]    : Return immediately after function execution.
' [1-Blocking]     : Does not return until the alarm code is read from SERVOPACK.
' [2-Non Blocking] : Does not return until the alarm code is read from SERVOPACK. but program is not blocked.
Public Declare Function AxmStatusReadServoAlarm Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uReturnMode As Integer, ByRef upAlarmCode As Integer) As Integer
' The API to recieve alarm string about specified error code.
Public Declare Function AxmStatusGetServoAlarmString Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uAlarmCode As Integer, ByVal lAlarmStringSize As Integer, ByRef szAlarmString As String) As Integer
    Public Declare Function AxmStatusReadServoAlarmString Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal lAlarmStringSize As Integer, ByRef szAlarmString As char*) As Integer

' The API to Command to SERVOPACK for read Alarm History of specified axis.
Public Declare Function AxmStatusRequestServoAlarmHistory Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer
' The API to read SERVOPACK alarm history of specified axis.
' lpCount          : Number of read alarm history.
' upAlarmCode      : The array to return alarm history.
' uReturnMode      : Set return mode of this API.
' [0-Immediate]    : Return immediately after function execution.
' [1-Blocking]     : Not return until reading alarm code from SERVOPACK.
' [2-Non Blocking] : Not return until reading alarm code from SERVOPACK. but program is not blocked.
Public Declare Function AxmStatusReadServoAlarmHistory Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uReturnMode As Integer, ByRef lpCount As Integer, ByRef upAlarmCode As Integer) As Integer
' Clear SERVOPACK alarm history of specified axis.
Public Declare Function AxmStatusClearServoAlarmHistory Lib "AXL.dll" (ByVal lAxisNo As Integer) As Integer


'======== API related home. =============================================================================================================================================================================================
' Set home sensor level of specific axis.
' uLevel : LOW(0), HIGH(1)
Public Declare Function AxmHomeSetSignalLevel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uLevel As Integer) As Integer
' Return home sensor level of specific axis.
Public Declare Function AxmHomeGetSignalLevel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upLevel As Integer) As Integer
' Verify current home signal input status. Hoe signal can be set by user optionally by using AxmHomeSetMethod API.
' upStatus : OFF(0), ON(1)
Public Declare Function AxmHomeReadSignal Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upStatus As Integer) As Integer



' Parameters related to origin detecting must be set in order to detect origin of relevant axis.
' If the initialization is done properly by using MotionPara setting file, no separate setting is required.
' In the setting of origin detecting method, direction of detecting proceed, signal to be used for origin, active level of origin sensor and detecting/no detecting of encoder Z phase are set.
' Caution : When the level is set wrong, it may operate + direction even though ? direction is set, and may cause problem in finding home.
' (Refer the guide part of AxmMotSaveParaAll for detail information. )
' Use AxmSignalSetHomeLevel for home level.
' HClrTim : HomeClear Time : Queue time for setting origin detecting Encoder value.
' HmDir(Home direction): DIR_CCW(0): - direction    , DIR_CW(1) = + direction   // HOffset ? traveled distance after detecting of origin.
' uZphas: Set whether to detect of encoder Z phase after completion of the 1st detecting of origin.
' HmSig : PosEndLimit(0) -> +Limit
'         NegEndLimit(1) -> -Limit
'         HomeSensor (4) -> origin sensor(universal input 0)
Public Declare Function AxmHomeSetMethod Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal lHmDir As Integer, ByVal uHomeSignal As Integer, ByVal uZphas As Integer, ByVal dHomeClrTime As Double, ByVal dHomeOffset As Double) As Integer
' Return set parameters related to home.
Public Declare Function AxmHomeGetMethod Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef lpHmDir As Integer, ByRef upHomeSignal As Integer, ByRef upZphas As Integer, ByRef dpHomeClrTime As Double, ByRef dpHomeOffset As Double) As Integer


' Set Home Search Fine tunning Method (Don't care Setting by default).
' dHomeDogDistance[500 pulse]: Set Dog Length. (Unit = AxmMotSetMoveUnitPerPulse function Setting Unit)
' lLevelScanTime[100msec]: Set level status confirmation scan time. (msec[1~1000])
' dwFineSearchUse[USE]: Select find search method. (Default use 5Step, Select 0 use 3Step)
' dwHomeClrUse[USE]: Set After Home Search Automatically Command/Actual Position Set 0 value of  specific axis.
Public Declare Function AxmHomeSetFineAdjust Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dHomeDogLength As Double, ByVal lLevelScanTime As Integer, ByVal uFineSearchUse As Integer, ByVal uHomeClrUse As Integer) As Integer
' Return set Home  Search fine tunning Method parameters related to home.
Public Declare Function AxmHomeGetFineAdjust Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpHomeDogLength As Double, ByRef lpLevelScanTime As Integer, ByRef upFineSearchUse As Integer, ByRef upHomeClrUse As Integer) As Integer

    Public Declare Function AxmHomeSetInterlock Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uInterlockMode As Integer, ByVal dInterlockData As Double) As Integer
    Public Declare Function AxmHomeGetInterlock Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upInterlockMode As Integer, ByRef dpInterlockData As Double) As Integer


' Detect through several steps in order to detect origin quickly and precisely. Now, set velocities to be used for each step.
' The time of origin detecting and the accuracy of origin detecting are decided by setting of these velocities.
' Set velocity of origin detecting of each axis by changing velocities of each step.
' (Refer the guide part of AxmMotSaveParaAll for detail information.)
' API which sets velocity to be used in origin detecting.
' [dVelFirst]- 1st move velocity   [dVelSecond]- velocity after detecting   [dVelThird]- the last velocity  [dvelLast]- index detecting and in order to detect precisely.
' [dAccFirst]- 1st move acceleration [dAccSecond]-acceleration after detecting.
Public Declare Function AxmHomeSetVel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVelFirst As Double, ByVal dVelSecond As Double, ByVal dVelThird As Double, ByVal dVelLast As Double, ByVal dAccFirst As Double, ByVal dAccSecond As Double) As Integer
' Return set velocity to be used in origin detecting.
Public Declare Function AxmHomeGetVel Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dpVelFirst As Double, ByRef dpVelSecond As Double, ByRef dpVelThird As Double, ByRef dpVelLast As Double, ByRef dpAccFirst As Double, ByRef dpAccSecond As Double) As Integer

